# anki-hanzi-quiz

./: .eslintrc.js  .gitignore  HanziQuizzWC.ts  InlineChunkHtmlPlugin.js  README.md  anki-backup.js  custom.d.ts  front.html  index-dev.html  index-gh-pages.html  index.html  package-lock.json  package.json  server.js  tsconfig.json  webpack.config.js
.github/workflows/: static.yml
scripts/: ids.json  makemeahanzi_dictionary_to_json_array.js  makemeahanzi_dictionary_to_json_object.js  tmp.json
scripts/acjk/: README.md  acjk_dict_to_json.js  dictionaryZhHans.json  graphicsKana.json  ids_to_json.js
scripts/update_anki_template/: .env_example  main.py  pyproject.toml
src/: .BasicElement.ts.swm  .BasicElement.ts.swn  .BasicElement.ts.swo  .BasicElement.ts.swp  .HanziQuiz.ts.swo  .HanziQuiz.ts.swp  .HanziQuizzWC.ts.swp  BasicElement.d.ts  BasicElement.ts  CharacterAnim.d.ts  CharacterAnim.ts  CharacterMorph.d.ts  CharacterMorph.ts  CharacterQuiz.d.ts  CharacterQuiz.ts  CharactersSlideshowQuiz.d.ts  CharactersSlideshowQuiz.ts  HanziDesc.d.ts  HanziDesc.test.ts  HanziDesc.ts  HanziDictionary.d.ts  HanziDictionary.ts  HanziDictionary_OLD.ts  HanziPinyinSelector.d.ts  HanziPinyinSelector.ts  HanziQuiz.d.ts  HanziQuiz.ts  HanziQuizzWC.d.ts  HanziQuizzWC.ts  HanziWriter.d.ts  HanziWriter.ts  InteractiveCharacter.d.ts  InteractiveCharacter.ts  LomApp.js  anki_api.d.ts  anki_api.ts  decompose.d.ts  decompose.ts  fetchCharacter.d.ts  fetchCharacter.ts  (+16 more)
src/morph/: getMorphs.d.ts  getMorphs.ts  getMorphs.worker.ts  runMorph.d.ts  runMorph.ts
src/pouic/: attr_binding.js  (+7 more)
(+2 files in other folders)
